spade-tests/src/snapshots/spade_tests__linear_check__checking_works_with_decld_value.snap
---
source: spade-tests/src/linear_check.rs
---
entity make_port() -> &mut bool __builtin__
entity consume(p: &mut bool) -> bool __builtin__

entity test() -> bool {
    decl x;
    let _ = inst consume(x);
    let x = inst make_port();
    let _ = inst consume(x);
    true
}


error: Use of consumed resource
  ┌─ testinput:8:26
  │
6 │     let _ = inst consume(x);
  │                          - Previously used here
7 │     let x = inst make_port();
8 │     let _ = inst consume(x);
  │                          ^ Use of consumed resource


